@@ -7,6 +7,9 @@
 	* cobc.c (process_command_line), flag.def: -g now implies the recently
 	  added flags -fgen-c-line-directives and -fgen-c-labels
 	* codegen.c: output "cob_nop ();" instead of ";" for not-optimized "no op"
+	* codegen.c (output_initialize_compound): temporary remove of reference
+	  checks not needed any more
+	* codegen.c (output_param): removed extra fname
 
 2020-11-25  Simon Sobisch <simonsobisch@gnu.org>
 
